--- a/src/app/dailogs/map-controllers-popup/map-controllers-popup.component.html
+++ b/src/app/dailogs/map-controllers-popup/map-controllers-popup.component.html
@@ -384,6 +384,15 @@
       </div>
       <!-- </div> -->
     </div>
+    <div class="flex flex-col w-2/4 p-[8px] gap-[5px] flex-0 rounded-[3px] bg-primaryBg justify-center">
+      <!-- <div class="flex flex-col items-start gap-[5px] self-stretch"> -->
+      <span class="text-secondary-heiglight text-sm font-semibold">Holdback (h):
+      </span>
+      <div class="flex gap-2">
+        <span class="text-secondaryText">{{data?.vendorData.holdback_seconds ? holdbackDecimal(data?.vendorData.holdback_seconds/86400):null}}</span>
+      </div>
+      <!-- </div> -->
+    </div>
   </div>
   <div *ngIf="data.vendorData.nearest_site" class="flex flex-col items-start gap-[5px] self-stretch">
     <span class="flex-0 text-secondary-heiglight font-Barlow font-bold text-xs leading-[18px]">Nearest POI</span>
