--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-between items-end " [ngClass]="drawStatus === 'open'? 'gap-[10px]':'gap-[10px]'">
+<div class="flex justify-between items-end w-full">
   <div class="w-fit flex h-[50px] bg-primaryBg rounded-[5px] shadow-custom-black">
     <div class="border-r border-custom-border px-[15px] w-[120px]">
 
@@ -56,7 +56,7 @@
       </span>
     </div>
     <div class="flex items-center px-[10px] gap-[10px] w-[55px] h-[50px] relative">
-      <ul *ngIf="showLayers" class="absolute w-[170px] font-Barlow h-auto rounded-[5px] bg-primaryBg -top-[255px] left-0">
+      <ul *ngIf="showLayers" class="absolute w-[170px] font-Barlow h-auto rounded-[5px] bg-primaryBg shadow-custom-light -top-[255px] left-0">
         <li (click)="selectedLayer('OpenStreetMapLight')" [ngClass]="ActiveLayer === 'OpenStreetMapLight' ? 'bg-yellow text-main-highlight rounded-t-[5px]':'text-secondaryText'"
           class="border-b cursor-pointer h-[50px] last:border-b-0 border-solid border-custom-border text-sm font-medium">
           <span class="flex items-center px-2 h-full w-full">OpenStreetMap</span>
