--- a/src/app/components/sidebar-drawer/sidebar-drawer.component.html
+++ b/src/app/components/sidebar-drawer/sidebar-drawer.component.html
@@ -10,5 +10,8 @@
     <app-groups (closeDrawer)="closeDrawer($event)"></app-groups>
 } @else if (type === 'Imagery') {
     <app-imagery-status (closeDrawer)="closeDrawer($event)"></app-imagery-status>
+}@else if (type === 'analysis') {
+    <app-analysis (closeDrawer)="closeDrawer($event)"></app-analysis>
 }
+
 </div>
