--- a/src/app/dailogs/map-controllers-popup/map-controllers-popup.component.html
+++ b/src/app/dailogs/map-controllers-popup/map-controllers-popup.component.html
@@ -525,7 +525,7 @@
         </span>          
     </div>
   </div>
-  <div class="flex justify-between w-full items-end">
+  <div class="flex justify-between w-full items-end mb-[20px]">
     <span class="flex-0 text-secondary-heiglight font-Barlow font-bold text-xs leading-[18px]">Copy Data</span>
     <span class="h-[17px] w-[16px] cursor-pointer" matTooltip="Coppy Address" (click)="copyData(data?.vendorData)">
       <img src="/assets/svg-icons/copy-icon.svg" alt="" />
