--- a/src/app/dailogs/map-controllers-popup/map-controllers-popup.component.html
+++ b/src/app/dailogs/map-controllers-popup/map-controllers-popup.component.html
@@ -384,7 +384,7 @@
       <div class="flex flex-col w-2/4 p-[8px] gap-[5px] flex-0 rounded-[3px] bg-primaryBg justify-center">
         <span class="flex-0 text-secondary-heiglight font-Barlow font-bold text-xs leading-[18px]">GSD (m)</span>
         <div class="flex items-center gap-[15px] self-stretch w-full">
-            <span class="flex-0 font-Barlow text-xs font-medium leading-[18px] text-secondaryText w-full break-words">{{roundOff(data?.vendorData?.gsd)}}m</span>         
+            <span class="flex-0 font-Barlow text-xs font-medium leading-[18px] text-secondaryText w-full break-words">{{gsdRoundOff(data?.vendorData?.gsd)}}m</span>         
         </div> 
       </div>    
       <div class="flex flex-col w-2/4 p-[8px] gap-[5px] flex-0 rounded-[3px] bg-primaryBg  justify-center">
