--- a/src/app/dailogs/common-dailogs/common-dailogs.component.html
+++ b/src/app/dailogs/common-dailogs/common-dailogs.component.html
@@ -159,6 +159,96 @@
             </div>
         </form>
     </div>
+} @else if (data.type ==='logs') {
+    <div class="!p-[10px] bg-primaryBg flex flex-col gap-[15px]">
+        <div class="">
+            <span class="font-Barlow text-secondaryText font-semibold text-sm">View Logs</span>
+        </div>
+        <div class="overflow-auto max-h-[560px] px-[10px]">
+            <table  mat-table [dataSource]="viewLogsData" class="!bg-primaryBg !border !border-secondaryText !border-solid !rounded-md">
+                <ng-container matColumnDef="db_id">
+                <th
+                    mat-header-cell
+                    *matHeaderCellDef
+                    class="min-w-[80px] !pl-[10px] text-secondaryText font-semibold !border-b !border-b-solid !border-b-secondaryText"
+                >
+                    DB ID
+                </th>
+                <td
+                    mat-cell
+                    *matCellDef="let row"
+                    class="min-w-[80px] !pl-[10px] text-secondaryText !border-b !border-b-solid !border-b-secondaryText"
+                >
+                    {{ row?.id }}
+                </td>
+                </ng-container>
+                <ng-container matColumnDef="vendor_id">
+                <th
+                    mat-header-cell
+                    *matHeaderCellDef
+                    class="min-w-[80px] !pl-[10px] text-secondaryText font-semibold !border-b !border-b-solid !border-b-secondaryText"
+                >
+                    Vendor ID
+                </th>
+                <td
+                    mat-cell
+                    *matCellDef="let row"
+                    class="min-w-[80px] !pl-[10px] text-secondaryText !border-b !border-b-solid !border-b-secondaryText"
+                >
+                    {{ row?.vendor_id }}
+                </td>
+                </ng-container>
+
+                <ng-container matColumnDef="failure_reason">
+                <th
+                    mat-header-cell
+                    *matHeaderCellDef
+                    class="min-w-[80px] !pl-[10px] text-secondaryText font-semibold !border-b !border-b-solid !border-b-secondaryText"
+                >
+                    Failure Reason
+                </th>
+                <td
+                    mat-cell
+                    *matCellDef="let row"
+                    class="min-w-[80px] group relative !overflow-visible !pl-[10px] text-secondaryText !border-b !border-b-solid !border-b-secondaryText"
+                >
+                    {{ row?.failure_reason }}
+                
+                </td>
+                </ng-container>
+
+                <ng-container matColumnDef="process_time">
+                <th
+                    mat-header-cell
+                    *matHeaderCellDef
+                    class="min-w-[80px] !pl-[10px] text-secondaryText font-semibold !border-b !border-b-solid !border-b-secondaryText"
+                >
+                    Process Time
+                </th>
+                <td
+                    mat-cell
+                    *matCellDef="let row"
+                    class="min-w-[80px] group relative !overflow-visible !pl-[10px] text-secondaryText !border-b !border-b-solid !border-b-secondaryText"
+                >
+                    {{ row?.created_at | utcDateTimePipe }}
+                    
+                </td>
+                </ng-container>
+                <tr
+                mat-header-row
+                *matHeaderRowDef="innerDisplayedColumns; sticky: true"
+                ></tr>
+                <tr
+                mat-row
+                *matRowDef="let row; columns: innerDisplayedColumns"
+                ></tr>
+            </table>
+        </div>
+        <div class="flex justify-center w-full">
+            <button
+            class="flex justify-center !text-[#ABB7C0] items-center text-center w-[300px] h-[38px] py-[10px] bg-secondary-heiglight rounded-[5px]" (click)="closeDialog()">Close</button>
+        </div>
+    </div>
 } @else {
     <div class="bg-primaryBg"  id="delete">
         <div class="p-[15px] flex flex-col gap-[15px]">
