--- a/src/app/dailogs/map-controllers-popup/map-controllers-popup.component.html
+++ b/src/app/dailogs/map-controllers-popup/map-controllers-popup.component.html
@@ -406,7 +406,7 @@
     <div class="flex flex-col w-2/4 p-[8px] gap-[5px] flex-0 rounded-[3px] bg-primaryBg justify-center">
       <span class="flex-0 text-secondary-heiglight font-Barlow font-bold text-xs leading-[18px]">Azimuth Angle</span>
       <div class="flex items-center gap-[15px] self-stretch w-full">
-          <span class="flex-0 font-Barlow text-xs font-medium leading-[18px] text-secondaryText w-full break-words">{{data?.vendorData?.azimuth_angle}}</span>         
+          <span class="flex-0 font-Barlow text-xs font-medium leading-[18px] text-secondaryText w-full break-words">{{data?.vendorData?.azimuth_angle}}°</span>         
       </div> 
     </div>      
 </div><div class="flex items-center gap-[5px] self-stretch w-full font-Barlow">
@@ -429,14 +429,14 @@
   <div class="flex flex-col w-2/4 p-[8px] gap-[5px] flex-0 rounded-[3px] bg-primaryBg justify-center">
     <span class="flex-0 text-secondary-heiglight font-Barlow font-bold text-xs leading-[18px]">Illumination Angle</span>
     <div class="flex items-center gap-[15px] self-stretch w-full">
-        <span class="flex-0 font-Barlow text-xs font-medium leading-[18px] text-secondaryText w-full break-words">{{data?.vendorData?.illumination_azimuth_angle}}</span>         
+        <span class="flex-0 font-Barlow text-xs font-medium leading-[18px] text-secondaryText w-full break-words">{{data?.vendorData?.illumination_azimuth_angle}}°</span>         
     </div> 
   </div>    
   <div class="flex flex-col w-2/4 p-[8px] gap-[5px] flex-0 rounded-[3px] bg-primaryBg justify-center">
     <!-- <div class="flex flex-col items-start gap-[5px] self-stretch"> -->
       <span class="flex-0 text-secondary-heiglight font-Barlow font-bold text-xs leading-[18px]">Satellite Angle</span>
       <div class="flex items-center gap-[15px] self-stretch w-full">
-        <span class="text-secondaryText text-xs font-medium leading-[18px]">{{data?.vendorData?.illumination_azimuth_angle}}</span>
+        <span class="text-secondaryText text-xs font-medium leading-[18px]">{{data?.vendorData?.illumination_azimuth_angle}}°</span>
       </div>
     <!-- </div> -->
   </div>         
@@ -463,7 +463,7 @@
   <div class="flex items-center gap-[5px] self-stretch w-full font-Barlow">   
     <div class="flex flex-col w-2/4 p-[8px] gap-[5px] flex-0 rounded-[3px] bg-primaryBg justify-center">
       <!-- <div class="flex flex-col items-start gap-[5px] self-stretch"> -->
-      <span class="text-secondary-heiglight text-xs font-semibold">Centroid Lat:
+      <span class="text-secondary-heiglight text-xs font-semibold">Centroid Lat, Lon:
       </span>
       <div class="flex gap-2">
         <div class="flex gap-2" *ngFor="let center of data?.vendorData?.centroid">
